...
    });
  }

  @override
  Widget build(BuildContext context) {
    return MaterialApp(
      title: 'Latin Squares Display',
      debugShowCheckedModeBanner: false,
      themeMode: _themeMode,
      theme: ThemeData(
        colorScheme: ColorScheme.fromSeed(seedColor: Colors.deepPurple),
        useMaterial3: true,
      ),
...
